editorial process source

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -58,7 +58,7 @@ An increasing body of voices in the scientific community has started to speak up
 \subsection{Peer-review: a flawed and outdated system}
 Peer-review is the traditional and necessary process at the heart of quality control in science [9, 12], determining the destinies of articles’ publications and therefore of scientific dissemination. However, the current peer-review system is outdated: in the past, it was effective when scholarly communication happened exclusively through printed paper journals, but nowadays, with the high and fast-paced levels of articles productions, its slow and multistage process doesn’t keep up with the times. 
 \subsubsection{It's a slow multi-stage process.} Indeed, articles submitted to journals can take from months to years after editors’ first scrutiny, going back and forth several review rounds before acceptance for publications. 
-\paragraph{Traditional peer-review process}
+\paragraph{Traditional peer-review process} This section takes inspiriration from the editorial processes at Nature Methods and Wiley.
 \begin{enumerate}
     \item The author submits a manuscript to the journal.
     \item  An editorial team  assesses the paper for what concerns the requirements of the journal's Author's Guideline (composition, sections...).
@@ -147,7 +147,7 @@ or
 
 
 \subsection{Implementation}
-\subsubsection{Back-end} ??
+\subsubsection{Back-end} ?? BETTER HERE SAY WHAT WE HAVE ALREADY DONE, PRESENTED 
 AntsReview is a destributed peer-review system which synthetizes successfull ideas from previous systems including The Bounty Network[ref], ERC20[ref], AZTEC Protocol[ref], IPFS[ref], Proof of Existence[ref], ...
 \newline The contribution of AntsReview is simply allowing the peer-review process, as a complex system, to emerge as a self-organised ecosystem of authors and peer-reviewers to enhance the complexity of a paper and its validation.
 \newline AntsReview represent a new platform to issue peer-reviews and validate scientific papers and a new system for anonymous and open contributions with an incentivization mechanism to reach an ideal state of equilibrium and create value.
@@ -161,7 +161,7 @@ AntsReview is a destributed peer-review system which synthetizes successfull ide
   \item \textbf{Privacy} - mantains the anonymity of the system via AZTEC Protocol.
 \end{enumerate}
 
-\subsubsection{Bounty}
+\subsubsection{Token economy and Bounty}
 AntsReview is the core of the smart contracts deployed on Ethereum Rinkeby's Testnet as shown in the flow-chart[img].
 \newline It implements a Bounty-like system where an issuer (author) is asked a serious of actions, to ensure transparency and robustness, regarding the AntReview that he's creating:
 \begin{itemize}
@@ -195,19 +195,6 @@ In this way, only the Issuer (author) can create a new AntReview.
 \newline As the pioneer of blockchain an cited by Bitcoin whitepaper, they were in a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin as its first application.
 \newline In Ethereum the concept of immutablity is achieved via the blockchain and proof of work consesus algorithm by a chain of timestamped block hashes that are secured by miners competing computations.
 \newline AntsReview is evaluating the advantages of storing the hashes of the peer-reviews into a Merkle Tree to achieve immutability.
-
-
-
-
-
-
-
-
-
-
-
-
-\subsubsection{Token Economics} what is this?
 
 \subsubsection{Front-end} 
 
