--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -230,7 +230,7 @@ TDB
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests. 
 
-\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi for his comments and edits.
+\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi and Keno Budde for internal review and useful comments.
 
 % ---- Bibliography ----
 %
